--- a/TrueDogStore/Views/Home/Privacy.cshtml
+++ b/TrueDogStore/Views/Home/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy - DogStore";
+    ViewData["Title"] = "Privacy Policy";
 }
 
 <!DOCTYPE html>
@@ -68,14 +68,11 @@
     <div class="container show">
         <h1>Privacy Policy</h1>
         <p class="privacy-text">
-            Your privacy is important to us. This Privacy Policy explains the types of information we may collect from you or that you provide when using the DogStore website, as well as how we process, use, protect, and disclose this information.
+            Welcome to Pawfection!<br />
+            Your privacy is important to us. This Privacy Policy explains the types of information we may collect from you or that you provide when using the Pawfection website, as well as how we process, use, protect, and disclose this information.
         </p>
         <p class="last-updated">
             Last Updated: August 29, 2023
-        </p>
-        <p class="privacy-text">
-            Welcome to DogStore!<br />
-            Your privacy is important to us. This Privacy Policy explains the types of information we may collect from you or that you provide when using the DogStore website, as well as how we process, use, protect, and disclose this information.
         </p>
         <h2>Collected Data</h2>
         <p class="privacy-text">
@@ -111,10 +108,10 @@
         </p>
         <h2>Contact Information</h2>
         <p class="privacy-text contact-info">
-            If you have questions or concerns about our Privacy Policy, please contact us at <a href="mailto:contact@dogstore.com">contact@dogstore.com</a>
+            If you have questions or concerns about our Privacy Policy, please contact us at <a href="mailto:contact@pawfection.com">contact@pawfection.com</a>
         </p>
         <p class="privacy-text">
-            Thank you for using DogStore!
+            Thank you for using Pawfection!
         </p>
     </div>
 
