--- a/TrueDogStore/Views/Pet/Index.cshtml
+++ b/TrueDogStore/Views/Pet/Index.cshtml
@@ -5,10 +5,23 @@
 }
 
 <style>
-   
+
+
     .dog-image {
         width: 300px; 
         height: 325px; 
+    }
+
+    .btn-outline-primary {
+        transition: background-color 0.3s, color 0.3s;
+    }
+
+    .btn-outline-success {
+        transition: background-color 0.3s, color 0.3s;
+    }
+
+    .btn-outline-danger {
+        transition: background-color 0.3s, color 0.3s;
     }
 </style>
 
