--- a/TrueDogStore/Views/Account/Login.cshtml
+++ b/TrueDogStore/Views/Account/Login.cshtml
@@ -4,12 +4,107 @@
     ViewData["Title"] = "Login";
 }
 
+<style>
+    .text-danger {
+        color: rgba(220,0,0) !important; /* Темно-красный цвет текста */
+        font-weight: bold;
+        font-size: 18px;
+    }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus {
+        transition: background-color 5000s ease-in-out 0s;
+        -webkit-text-fill-color: white;
+        
+    }
+    body {
+        background-image: url('/images/registerBg.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .transparent-card {
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, 0.5);
+        border-radius: 20px;
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+        
+    }
+
+        .transparent-card .card-body {
+            padding: 20px;
+        }
+
+        .transparent-card .form-control {
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid #FFF;
+            border-radius: 0;
+            box-shadow: none;
+            padding-left: 0;
+        }
+
+        .transparent-card .input-group-text {
+            background-color: transparent;
+            border: none;
+        }
+
+        .transparent-card .form-group .input-group-append {
+            position: absolute;
+            right: -5px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 1;
+            background-color: transparent;
+            border: none;
+            color: #fff;
+           
+        }
+    .card-header h4 {
+        font-size: 28px;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
+    }
+
+    .form-group label {
+        font-size: 21px;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
+    }
+
+    .form-group input[type="text"],
+    .form-group input[type="password"] {
+        font-size: 22px;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        padding-right: 30px;
+    }
+
+    ul, li {
+        font-size: 18px;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
+    }
+
+    .fa-envelope {
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
+    }
+
+    .fa-lock {
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
+    }
+
+</style>
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card mt-5">
+            <div class="card mt-5 transparent-card">
                 <div class="card-header">
-                    <h4 class="text-center">Log in to your account</h4>
+                    <h4 class="text-center">Sign in</h4>
                 </div>
                 <div class="card-body">
                     @if (TempData["Error"] != null)
@@ -22,12 +117,26 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="EmailAddress" class="control-label">Email Address</label>
-                            <input asp-for="EmailAddress" class="form-control" />
+                            <div class="input-group">
+                                <input asp-for="EmailAddress" class="form-control" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-envelope"></i>
+                                    </span>
+                                </div>
+                            </div>
                             <span asp-validation-for="EmailAddress" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Password" class="control-label">Password</label>
-                            <input asp-for="Password" class="form-control" />
+                            <div class="input-group">
+                                <input asp-for="Password" class="form-control" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </div>
+                            </div>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="form-group text-center">
@@ -36,6 +145,12 @@
                         </div>
                     </form>
                 </div>
+                <p class="text-center" style="font-size: 18px; color: #fff; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)">
+                    Don't have an account?
+                    <a asp-controller="Account" asp-action="Register" style=" color: #fff; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); text-decoration: none;">
+                        <span style="font-weight: bold;">Sign up</span>
+                    </a>
+                </p>
             </div>
         </div>
     </div>
