--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -11,12 +11,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DogStore</title>
+    <title>@ViewData["Title"] - Pawfection</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <style>
 
 
@@ -55,15 +57,13 @@
 
 
         .footer {
-            position: fixed;
-            
-            width: 100%;
-            background-color: #f8f9fa;
-            padding: 10px 0; 
-            text-align: center;
-            color: #6c757d; 
-            bottom: 0;
-            z-index: 1000}
+            position: fixed!important;
+            width: 100% !important;
+            padding: 10px 0 !important;
+            text-align: center !important;
+            bottom: 0 !important;
+            z-index: 1000 !important
+        }
 
         .navbar .nav-link {
             font-size: 20px; 
@@ -77,7 +77,7 @@
             margin-right: 100px; 
         }
 
-       
+ 
         .rounded-circle {
             width: 45px; 
             height: auto; 
@@ -110,6 +110,11 @@
                 border: 2px solid white !important; 
             }
 
+        .footer {
+            background-color: #333; /* Задаем темный цвет фона */
+            color: #fff; /* Задаем белый цвет текста */
+        }
+
 
         
     </style>
@@ -121,7 +126,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="mr-3">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/images/dogshelterLogo.jpg" alt="DogStore Logo" height="50">DogStore
+                    <img src="~/images/dogshelterLogo.jpg" alt="Pawfection Logo" height="50"> Pawfection
                 </a>
             </div>
             <div class="navbar-nav mr-2">
@@ -138,7 +143,7 @@
             <div class="mx-auto">
                 <form class="form-inline" asp-area="" asp-controller="Search" asp-action="Index" method="get" onsubmit="return validateSearch()">
                     <div class="input-group">
-                        <input type="text" class="form-control rounded" name="search" id="searchInput" placeholder="Search for pet breeds" style="width: 370px;" value="@Context.Request.Query["search"]">
+                        <input type="search" class="form-control rounded" name="search" id="searchInput" placeholder="Search for pet breeds" style="width: 370px;" value="@Context.Request.Query["search"]">
                         <div class="input-group-append">
                             <button class="btn btn-outline-primary custom-button" type="submit">
                                 <i class="bi bi-search"></i>
@@ -177,10 +182,8 @@
                 }
                 else
                 {
-                    <div class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                    </div>
-                    <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+
+                    <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Sign in</a>
                 }
             </div>
         </nav>
@@ -195,7 +198,7 @@
 
     <footer class="border-top footer text-muted">
         <div >
-            &copy; 2023 - DogStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Pawfection - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
