--- a/TrueDogStore/Views/Search/Index.cshtml
+++ b/TrueDogStore/Views/Search/Index.cshtml
@@ -51,9 +51,9 @@
             padding: 0;
         }
 
-        /* Стили для кнопок */
+    
         .pet-buttons {
-            margin-top: auto; /* Переместить кнопки вниз (в конец контейнера) */
+            margin-top: auto; 
         }
 
         .no-results {
@@ -72,11 +72,11 @@
 
 
         .result-wrapper {
-            background-color: #f9f9f9; /* Цвет фона */
-            padding: 20px; /* Отступы вокруг содержимого */
-            border-radius: 10px; /* Закругленные углы */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Тень */
-            margin-top: 20px; /* Отступ сверху */
+            background-color: #f9f9f9;
+            padding: 20px; 
+            border-radius: 10px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 20px; 
         }
 
 
