--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -111,8 +111,8 @@
             }
 
         .footer {
-            background-color: #333; /* Задаем темный цвет фона */
-            color: #fff; /* Задаем белый цвет текста */
+            background-color: #333; 
+            color: #fff; 
         }
 
 
