--- a/TrueDogStore/Views/Account/Register.cshtml
+++ b/TrueDogStore/Views/Account/Register.cshtml
@@ -14,7 +14,7 @@
     }
 
     .rule-invalid {
-        color: #9b1201; /* Темно-красный цвет текста */
+        color: #9b1201;
         font-weight: bold;
     }
 
@@ -63,8 +63,8 @@
         }
 
     .card-header h4 {
-        font-size: 28px; /* Размер шрифта по вашему выбору */
-        color: white; /* Черный цвет текста */
+        font-size: 28px; 
+        color: white; 
     }
 
     .form-group label {
@@ -77,11 +77,11 @@
     .form-group input[type="password"] {
         font-size: 22px;
         color: #fff; 
-        padding-right:30px;
+        padding-right:80px;
     }
     ul, li {
-        font-size: 18px; /* Размер шрифта по вашему выбору */
-        color: #fff; /* Черный цвет текста */
+        font-size: 18px; 
+        color: #fff; 
     }
     .fa-envelope{
         color: #fff;
@@ -93,10 +93,20 @@
 }
 
     .text-danger{
-        color: rgba(220,0,0)!important; /* Темно-красный цвет текста */
+        color: rgba(220,0,0)!important; 
         font-weight: bold;
         font-size:18px;
         
+    }
+
+    .fa-eye-slash {
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
+    }
+
+    .fa-eye {
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
     }
 </style>
 @if (TempData["Error"] != null)
@@ -139,14 +149,15 @@
                         </div>
 
                         <div class="form-group">
-                            <label asp-for="Password" class="control-label">
-                             
-                            </label>
+                            <label asp-for="Password" class="control-label">Password</label>
                             <div class="input-group">
-                                <input asp-for="Password" class="form-control" />
+                                <input asp-for="Password" class="form-control" type="password" id="passwordField" />
                                 <div class="input-group-append">
+                                    <span class="input-group-text" onclick="togglePasswordField()">
+                                        <i id="togglePasswordIcon" class="fas fa-eye-slash"></i>
+                                    </span>
                                     <span class="input-group-text">
-                                        <i class="fas fa-lock"></i> 
+                                        <i class="fas fa-lock"></i>
                                     </span>
                                 </div>
                             </div>
@@ -162,14 +173,15 @@
                         </div>
 
                         <div class="form-group">
-                            <label asp-for="ConfirmPassword" class="control-label">
-                               
-                            </label>
+                            <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
                             <div class="input-group">
-                                <input asp-for="ConfirmPassword" class="form-control" />
+                                <input asp-for="ConfirmPassword" class="form-control" type="password" id="passwordField" />
                                 <div class="input-group-append">
+                                    <span class="input-group-text" onclick="togglePasswordField()">
+                                        <i id="togglePasswordIcon" class="fas fa-eye-slash"></i>
+                                    </span>
                                     <span class="input-group-text">
-                                        <i class="fas fa-lock"></i> 
+                                        <i class="fas fa-lock"></i>
                                     </span>
                                 </div>
                             </div>
@@ -196,6 +208,18 @@
 </div>
 @section scripts{
 <script>
+        function togglePasswordField() {
+            var passwordField = document.getElementById('passwordField');
+            var togglePasswordIcon = document.getElementById('togglePasswordIcon');
+
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                togglePasswordIcon.className = 'fas fa-eye';
+            } else {
+                passwordField.type = 'password';
+                togglePasswordIcon.className = 'fas fa-eye-slash';
+            }
+        }
     $(document).ready(function () {
         $('#Password').keyup(function () {
             var password = $(this).val();
